<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".PredictionEventActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/layout_color"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/predictions_s_event"
            android:textColor="#0F7481"
            android:textStyle="bold"
            android:textSize="35sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/predictionImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/preidiction"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="101dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="LabelFor,TextContrastCheck" />



        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="100dp"
            android:background="#DFDBDB"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="57dp"
            android:text="@string/goto_predicition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>